# deep-learning-research-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml  tests.yml
app/: __init__.py  config.py  constants.py  server.py
app/agents/: __init__.py  agents.py  prompts.py  researcher.py  state.py  summarizer.py  supervisor.py  utils.py
app/agents/tools/: file_tools.py  research_tools.py  task_tool.py  todo_tools.py
app/api/: __init__.py  errors.py  models.py  server.py  websocket.py
app/config/: __init__.py  config.py
app/errors/: __init__.py  errors.py
app/prompts/: __init__.py  prompts.py
app/shared/config/: config.py
app/shared/errors/: __init__.py  errors.py
app/state/: __init__.py  state.py
app/tools/: __init__.py  file_tools.py  research_tools.py  task_tool.py  todo_tools.py
helm/: Chart.yaml  values.yaml
helm/deep-learning-research-agent/: Chart.yaml  values.yaml
helm/deep-learning-research-agent/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  job.yaml  pvc.yaml  secret.yaml  service.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: agents.py  constants.py  file_tools.py  prompts.py  research_tools.py  state.py  task_tool.py  todo_tools.py
src/agents/: __init__.py  agents.py
src/api/: models.py  server.py  websocket.py
src/state/: __init__.py
src/tools/: file_tools.py  research_tools.py
tests/: conftest.py  test_config.py  test_errors.py  test_websocket.py
