[project]
name = "deep-learning-research-agent"
version = "0.0.0-alpha"
description = "A deep learning research agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.5",
    "fastapi==0.119.0",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.22",
    "langchain-aws==0.2.35",
    "langchain-community==0.3.30",
    "langchain-ollama==0.3.10",
    "langchain-openai==0.3.35",
    "langchain-xai==0.2.5",
    "langgraph==0.6.8",
    "markdownify==1.2.0",
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "rich==14.1.0",
    "sqlmodel==0.0.25",
    "tavily-python==0.7.12",
    "typing-extensions==4.15.0",
    "uvicorn==0.37.0",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
    "watchdog==6.0.0",
]

# Override rules due to missing library stubs
[[tool.mypy.overrides]]
module = "markdownify"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "tavily"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
